<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_one"
        android:enabled="true"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/fragment_first_toolbar_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_two"
        android:enabled="true"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/fragment_second_toolbar_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_three"
        android:enabled="true"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/fragment_third_toolbar_title"
        app:showAsAction="ifRoom" />
</menu>